--- a/report/TermThreeProject.tex
+++ b/report/TermThreeProject.tex
@@ -11,6 +11,7 @@
 
 % Typefaces
 \setmonofont{Iosevka SS15}
+% \setmainfont{IBM Plex Sans}
 \setmainfont{Latin Modern Sans}
 % \setmonofont{Cascadia Code}
 \setmathfont{Latin Modern Math}
@@ -44,7 +45,6 @@
 
 % Bibliography
 \addbibresource{TermThreeProject.bib}
-% \addbibresource{TermThreeProject}
 \nocite{*}
 
 % Header and footer
@@ -87,10 +87,12 @@
 \end{titlingpage}
 
 % ToC
+
+{\hypersetup{linkcolor=black}
 \tableofcontents
 \listoffigures
 \listoftables
-\lstlistoflistings
+\lstlistoflistings}
 \newpage
 
 % Update Footer
@@ -194,7 +196,22 @@
                 \toprule
                 Tool Type & Tool Name & Where/How Used \\
                 \midrule
-                Strategy & Divide \& Conquer & Divide and conquer was used for the hardware design, the 
+                Strategy & Divide \& Conquer & Divide and conquer was used to split up the hardware design into:
+                \begin{itemize}
+                    \item Instrumentation amplifier
+                    \item LED arrays and driver
+                    \item \SI{2.5}{\volt} reference
+                    \item LC filter
+                \end{itemize}  \\
+                Building Block & Amplifier & An instrumentation amplifier was constructed out of operational amplifiers to appropriately amplify the signal from the Wheatstone bridge in the load cell. \\
+                Building Block & LC Filter & An LC filter was used to filter out noise from the load cell, and to not attenuate the signal. \\
+                Building Block & Buffer & A buffer was used to create a low impedance voltage reference. \\
+                Building Block & Current Limiting Resistor & Current limiting resistors were usd to limit the gate current for the MOSFETs and the current through the LEDs. \\
+                Building Block & Arduino microcontroller &  \\
+                Building Block & Pull up resistor &  \\
+                Building Block & Analog input &  \\
+                Building Block & Digital output &  \\
+                % Building Block & 
                 \bottomrule
             \end{tabularx}
         \end{table}
@@ -213,7 +230,7 @@
                 label=Listing:1,
                 captionpos=b
         }
-        \lstinputlisting{../HeadLight/main/button.c}
+        \lstinputlisting{../main/button.c}
         \lstset{language=C++,
                 basicstyle=\small\ttfamily,
                 numberstyle=\ttfamily,
@@ -226,7 +243,7 @@
                 label=Listing:1,
                 captionpos=b
         }
-        \lstinputlisting{../HeadLight/main/button.h}
+        \lstinputlisting{../main/button.h}
         \lstset{language=C++,
                 basicstyle=\small\ttfamily,
                 numberstyle=\ttfamily,
@@ -239,7 +256,7 @@
                 label=Listing:1,
                 captionpos=b
         }
-        \lstinputlisting{../HeadLight/main/LED_Group.c}
+        \lstinputlisting{../main/LED_Group.c}
         \lstset{language=C++,
                 basicstyle=\small\ttfamily,
                 numberstyle=\ttfamily,
@@ -252,7 +269,7 @@
                 label=Listing:1,
                 captionpos=b
         }
-        \lstinputlisting{../HeadLight/main/LED_Group.h}
+        \lstinputlisting{../main/LED_Group.h}
         \lstset{language=C++,
                 basicstyle=\small\ttfamily,
                 numberstyle=\ttfamily,
@@ -265,7 +282,7 @@
                 label=Listing:1,
                 captionpos=b
         }
-        \lstinputlisting{../HeadLight/main/LED_Group_Collection.c}
+        \lstinputlisting{../main/LED_Group_Collection.c}
         \lstset{language=C++,
                 basicstyle=\small\ttfamily,
                 numberstyle=\ttfamily,
@@ -278,7 +295,7 @@
                 label=Listing:1,
                 captionpos=b
         }
-        \lstinputlisting{../HeadLight/main/LED_Group_Collection.h}
+        \lstinputlisting{../main/LED_Group_Collection.h}
         \lstset{language=C++,
                 basicstyle=\small\ttfamily,
                 numberstyle=\ttfamily,
@@ -291,7 +308,7 @@
                 label=Listing:1,
                 captionpos=b
         }
-        \lstinputlisting{../HeadLight/main/Load_Cell.c}
+        \lstinputlisting{../main/Load_Cell.c}
         \lstset{language=C++,
                 basicstyle=\small\ttfamily,
                 numberstyle=\ttfamily,
@@ -304,7 +321,7 @@
                 label=Listing:1,
                 captionpos=b
         }
-        \lstinputlisting{../HeadLight/main/Load_Cell.h}
+        \lstinputlisting{../main/Load_Cell.h}
         \lstset{language=C++,
                 basicstyle=\small\ttfamily,
                 numberstyle=\ttfamily,
@@ -317,7 +334,7 @@
                 label=Listing:1,
                 captionpos=b
         }
-        \lstinputlisting{../HeadLight/main/main.c}
+        \lstinputlisting{../main/main.c}
         \lstset{language=C++,
                 basicstyle=\small\ttfamily,
                 numberstyle=\ttfamily,
@@ -330,7 +347,7 @@
                 label=Listing:1,
                 captionpos=b
         }
-        \lstinputlisting{../HeadLight/main/voltage.c}
+        \lstinputlisting{../main/voltage.c}
         \lstset{language=C++,
                 basicstyle=\small\ttfamily,
                 numberstyle=\ttfamily,
@@ -343,7 +360,7 @@
                 label=Listing:1,
                 captionpos=b
         }
-        \lstinputlisting{../HeadLight/main/voltage.h}
+        \lstinputlisting{../main/voltage.h}
         \lstset{language=C++,
                 basicstyle=\small\ttfamily,
                 numberstyle=\ttfamily,
@@ -356,7 +373,7 @@
                 label=Listing:1,
                 captionpos=b
         }
-        \lstinputlisting{../HeadLight/main/main.ino}
+        \lstinputlisting{../main/main.ino}
     \newpage
     \section{Schematic}
         \label{appendix:schematic}
