Added more building blocks

--- a/report/TermThreeProject.tex
+++ b/report/TermThreeProject.tex
@@ -207,10 +207,10 @@
                 Building Block & LC Filter & An LC filter was used to filter out noise from the load cell, and to not attenuate the signal. \\
                 Building Block & Buffer & A buffer was used to create a low impedance voltage reference. \\
                 Building Block & Current Limiting Resistor & Current limiting resistors were usd to limit the gate current for the MOSFETs and the current through the LEDs. \\
-                Building Block & Arduino microcontroller &  \\
-                Building Block & Pull up resistor &  \\
-                Building Block & Analog input &  \\
-                Building Block & Digital output &  \\
+                Building Block & Arduino microcontroller & The Arduino is the main controller for the circuit, it controls the brightness and reads the load cell. \\
+                Building Block & Pull up resistor & An internal pull up resistor is used for the button. A pull up was chosen so that the internal pull up resistor could be utilised, keeping the parts count down.\\
+                Building Block & Analog input & An analog input was used to read the amplified signal from the Wheatstone bridge of the load cell. \\
+                Building Block & Digital output & Digital outputs were used for the MOSFETs that control the LEDs, amd for the auxillary output. Digital outputs are capable of outputting PWM. \\
                 % Building Block & 
                 \bottomrule
             \end{tabularx}
