Added more to the table

--- a/report/TermThreeProject.tex
+++ b/report/TermThreeProject.tex
@@ -203,6 +203,14 @@
                     \item \SI{2.5}{\volt} reference
                     \item LC filter
                 \end{itemize}  \\
+                Design Principle & PCB layout & The layout of the PCB was done with the aim of complying with the PCB design rules, e.g. Having components neatly lined up, minimising acute angles of tracks, increasing clearance between components and tracks, and having high current tracks where needed. \\
+                Design Principle & Schematic layout & The schematic was done with the aim to follow the layout guidelines, for example, using labels, using power ports, separating major parts of the circuit, and ensuring that the labels are clear and easy to read. \\
+                Design Principle / Strategy & Modularity & The code was written with the aim to be modular, e.g. multiple header files and task specific files. \\
+                Design Principle & Testability & Test points were added around the circuit to aid in easy testing of the circuit's function. \\
+                Strategy & Get another perspective & Both the PCB and the schematic were checked by people other than the designer, to ensure that everything was clear and obvious. \\
+                Design Principle &  &  \\
+                Design Principle &  &  \\
+                Design Principle &  &  \\
                 Building Block & Amplifier & An instrumentation amplifier was constructed out of operational amplifiers to appropriately amplify the signal from the Wheatstone bridge in the load cell. \\
                 Building Block & LC Filter & An LC filter was used to filter out noise from the load cell, and to not attenuate the signal. \\
                 Building Block & Buffer & A buffer was used to create a low impedance voltage reference. \\
