Added more testing stuff

--- a/report/TermThreeProject.tex
+++ b/report/TermThreeProject.tex
@@ -187,6 +187,7 @@
 \section{Testing}
     The PCB will be assembled and attached to an Arduino. The code will be uploaded to the Arduino. The load cell will be manipulated, and the PWM signal will be probed using an oscilloscope. The duty cycle of the PWM signal will be compared to the expected duty cycle.
     The LEDs will then be connected, and the load cell manipulated to check that the LEDs behave as expected in terms of brightness and direction changes. 
+    The load cell signal will be probed to ensure that the gain resistor is the correct value. This will be done by placing an appropriately \SI{100}{\gram} mass on the load cell and measuring the voltage that is output by the instrumentation amplifier.
 
 \section{Conclusions}
 \newpage
